Mudando o nome do desenvolvedor para Pedro Libanio, e adicionando um link para o perfil do Instagram dele.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
             </a>
         </div>
     </div>
-    
-   
 
+    <footer class="dev-credits">
+        <a href="https://www.instagram.com/55pedrokz" target="_blank">Desenvolvido por Pedro Libanio</a>
+    </footer>
+    
 </div>
 
 <script>
@@ -81,7 +83,6 @@
             .then(() => console.log('Compartilhado com sucesso!'))
             .catch((error) => console.log('Erro ao compartilhar', error));
         } else {
-            // Caso o navegador (ex: PC antigo) não suporte, ele avisa
             alert('Para compartilhar, copie o link do navegador e envie para seus contatos!');
         }
     }
